retry initial updates
